<resources>

    <string name="app_name">O\'omor</string>
    <string name="unitCurrency">EGP per Kg</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordconfirm">Confirm Password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="emailaddress">Email Address</string>
    <string name="address">Address</string>
    <string name="locateme">Locate me</string>
    <string name="buildingnumber">Building Number</string>
    <string name="floornumber">Floor Number</string>
    <string name="apartmentnumber">Apartment Number</string>
    <string name="register">Register</string>
    <string name="rememberme">Remember me</string>
    <string name="loadingmenu">Loading menu...</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="logout">Log out</string>
    <string name="orders">Orders</string>
    <string name="profile">profile</string>
    <string name="menuprofile">\'s profile</string>
    <string name="pleasesignin">Please sign in to continue</string>
    <string name="yourorders">Your Orders</string>
    <string name="ordernumber">Order Number %d</string>
    <string name="orderstatus">Order Status</string>
    <string name="ongoing">On Going</string>
    <string name="deliviered">Delivered</string>
    <string name="LE">L.E</string>
    <string name="orderdetails">Order Details</string>
    <string name="deliveryaddress">Delivery Address</string>
    <string name="noorder">There are no orders</string>
    <string name="confirmremovingitem">Are you sure you want to remove this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="shoppingcart">Shopping Cart</string>
    <string name="total">Total: </string>
    <string name="addressconfirm">Confirm Address</string>
    <string name="addressconfirmbody">This order will be delivered to your current address, would you like to update your address?</string>
    <string name="changeaddress">Change My Address</string>
    <string name="usecurrentaddress">Use Current Address</string>
    <string name="changeusernameemail">Change Username/Email</string>
    <string name="changephone">Chane phone Number</string>
    <string name="changepassword">Change Password</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="changelocation">Change Location</string>
    <string name="updating">Updating...</string>
    <string name="save">Save</string>
    <string name="locating">Locating...</string>
    <string name="failedtolocate">Failed to locate</string>
    <string name="located">Located</string>
    <string name="kg">K.G</string>
    <string name="grams">G.M</string>
    <string name="welcome">Welcome %s</string>
    <string name="login">Login</string>
    <string name="registering">Register</string>
    <string name="newaccount">New Account</string>
    <string name="merregister">Register here</string>
    <string name="merchant">Merchant?</string>
    <string name="faxus">Fax:</string>
    <string name="aboutthisapp">This Application has been developed by ESI-Soft</string>
    <string name="contactus">Contact US: </string>
    <string name="clickhere">Click Here</string>
    <string name="delievery">Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="lang">Language</string>

    <string name="unitString">EGP per piece</string>
    <string name="unit">piece</string>
    <string name="units">pieces</string>

    <string name="vegetables">Vegetables</string>
    <string name="restaurants">Restaurants</string>


    <string name="about">About</string>
    <!--Merchant Strings-->
    <string name="forMerchants">For Merchants</string>
    <string name="mName">Full Name</string>
    <string name="mCity">City</string>
    <string name="mPhoneNumber">Phone Number</string>
    <string name="mStoreType">Store Type</string>
    <string name="mStoreName">Store Name</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="types">Activities</string>
    <string name='shops'>Shops</string>
    <string name="clothes">Clothes</string>
    <string name="markets">Supermarkets</string>
    <string name="shop_phone">Phone: %s</string>
    <string name="shop_address">Address : %s</string>
    <string name="geocoderApiKey">AIzaSyAVA0pPuqzogG_SXD8yhRDKkSPSmNgyBhc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="verifying_phone">Verifying your phone number, please wait.</string>
    <string name="phone_code">Phone code</string>
    <string name="resend_code">Resend code</string>
    <string name="resend_time">You can resend the code after %s</string>
    <string name="please_wait">Please wait....</string>
    <string name="verify">Verify</string>
    <string name="directions">Directions</string>
    <string name="date">Pick a date</string>
    <string name="ok">Continue</string>
    <string name="invalid_date">Please choose a valid date</string>
</resources>
