<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esi.easyorder.activites.RegisterActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include layout="@layout/custom_action_bar" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forMerchants"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/mName"
                        android:textDirection="ltr"
                        android:inputType="textPersonName" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/mPhoneNumber"
                        android:textDirection="ltr"
                        android:inputType="phone" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/mGetLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/locateme"
                    android:textColor="@android:color/white"
                    app:pb_cornerRadius="4dp"
                    app:pb_textComplete="@string/located"
                    app:pb_textError="@string/failedtolocate"
                    app:pb_textProgress="@string/locating"/>

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/mCity"
                        android:textDirection="ltr"
                        android:inputType="text" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mStoreType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/mStoreType"
                        android:textDirection="ltr"
                        android:inputType="text" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mStoreName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/mStoreName"
                        android:textDirection="ltr"
                        android:inputType="text" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/mRegisterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:background="#738276"
                    app:fb_radius="4dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
