<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="19sp"
        android:text="@string/verifying_phone"
        android:layout_marginBottom="13dp"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_code"
        android:id="@+id/code"
        android:layout_marginBottom="13dp"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:id="@+id/time_to_resend"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:id="@+id/resend_code"
            android:text="@string/resend_code"
            android:enabled="false"/>
    </LinearLayout>
</LinearLayout>